Fixes donation tracker on mobile

--- a/css/master.css
+++ b/css/master.css
@@ -595,8 +595,8 @@ main section.tracker section.donate-for-team {
     align-items: center;
   }
   main section.donation-tracker-cell img {
-    height: 50%;
     width: 50%;
+    max-height: 300px;
   }
   main section.donation-tracker-cell section.tracker section.runner-info h1.donation-title,
   main section.donation-tracker-cell section.tracker section.runner-info p {
