--- a/less/mobile.less
+++ b/less/mobile.less
@@ -114,8 +114,8 @@
       flex-direction: column;
       align-items: center;
       img {
-        height: 50%;
         width: 50%;
+        max-height: 300px;
       }
       section.tracker {
         section.runner-info {
